@@ -1,3 +1,11 @@
+2006-03-25  Ethan A Merritt  <merritt@u.washington.edu>
+
+	* src/graphics.c (plot_c_bars): Re-order the lines making up a
+	candlestick so that line-joining terminals have some change of
+	recognizing that the body is a closed rectangle.
+
+	* term/PostScript/prologue.ps: Add a shorthand for closepath.
+
 2006-03-24  Ethan A Merritt  <merritt@u.washington.edu>
 
 	* src/datafile.c: Remove vestigial comments about df_timecol[].
